Bug 192589: keep querying the presence of IPv4 and IPv6 interfaces until at least one is up. This allows us to detect the local machine going from offline to online.